--- a/package.json
+++ b/package.json
@@ -4,19 +4,29 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "yarn format",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.7.1",
+    "@mantine/dates": "^5.7.1",
+    "@mantine/form": "^5.7.1",
+    "@mantine/hooks": "^5.7.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "axios": "^1.1.3",
+    "dayjs": "^1.11.6",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "zustand": "^4.1.4"
   }
 }
